--- a/Template/Standard_US_ConsolidateInvoiceHeader.cshtml
+++ b/Template/Standard_US_ConsolidateInvoiceHeader.cshtml
@@ -1,5 +1,5 @@
 @using System.Data;
-@inherits Westwind.RazorHosting.RazorTemplateBase<ZeroChaos.Business.Entities.InvoicePdfGenerationDetails>
+@inherits Westwind.RazorHosting.RazorTemplateBase
 <style>
     * {
         font-family: 'Times New Roman';
@@ -9,7 +9,11 @@
         width: 100%;
         font-size: small;
         margin-top: 2%;
-        /*letter-spacing: 1px;*/
+		/*
+		border-style: dotted;
+		border-width: 1x;
+		border-color: red
+        letter-spacing: 1px;*/
     }
 
         .HeaderMainDiv > div {
@@ -40,70 +44,73 @@
     table {
         border-collapse: collapse;
         font-size: small;
-        width: 400px;
+        width: 450px;
     }
 
         table td {
             border: 2px solid #000;
             padding-left: 3px;
         }
+		
+	#header-table{
+		border-style: dotted;
+		border-width: 1x;
+		border-color: red
+	}	
 </style>
 <div class="HeaderMainDiv vertical-align-top">
-    <div class="font-bold vertical-align-top" style="padding-right:21px;">
-        <img src="@Model.ImagesFolderRootPath/zcLogo.png" alt="logo" style="width:90px;height:90px;" />
+    <div class="font-bold vertical-align-top" style="padding-right:10px;margin-right:50px;">
+        <img src="http://www.zerochaos.com/PDF/PdfImages/zclogo.png" alt="logo" style="width:90px;height:90px;" />
     </div>
-    @if (Model.HeaderDetailsDataSet.Tables[0].Rows.Count > default(int))
-    {
-        var headeAddressRow = Model.HeaderDetailsDataSet.Tables[0].Rows[0];
-        var detailsDataRow = Model.BodyDetailsDataSet.Tables[0].Rows[0];
-        <div style="width:68%; margin-top:1%" class="font-bold vertical-align-top">
-            <div align="right" style="width:9%;" class="vertical-align-top display-inline-block padding-right">
+  
+       <div class="display-inline-block">
+            <div style="margin-top:2%;width:6%;font-weight:bold;" class="vertical-align-top display-inline-block">
                 Bill To:
             </div>
-            <div class="display-inline-block ">
-                <span>@headeAddressRow["CustomerName"].ToString()</span>
-                <span>@headeAddressRow["DivisionName"].ToString()</span>
-                <span>@headeAddressRow["Address1"].ToString()</span>
-                <span>@headeAddressRow["Address2"].ToString()</span>
-                <span>@headeAddressRow["CityStateZip"].ToString()</span>
+            <div style="margin-top: 2%; width: 25%; font-weight: bold;" class="display-inline-block">
+                <span>ShoreTel</span>
+                <span>960 Stewart Dr.</span>
+                <span>Sunnyvale, CA 94085</span>
+             
             </div>
-            <div align="right" style="width:11%;" class="vertical-align-top display-inline-block padding-right">
+            <div style="margin-top: 2%; width:8%; font-weight: bold;" class="vertical-align-top display-inline-block">
                 Remit To:
             </div>
-            <div class="display-inline-block vertical-align-top">
-                <span>@headeAddressRow["MSPName"].ToString()</span>
-                <span>@headeAddressRow["MSPAddress1"].ToString()</span>
-                <span>@headeAddressRow["MSPAddress2"].ToString()</span>
-                <span>@headeAddressRow["MSPCityStateZip"].ToString()</span>
+            <div style="margin-top: 2%; width: 20%; font-weight: bold;" class="display-inline-block">
+                <span>ZeroChaos</span>
+                <span>PO Box 534305</span>
+                <span>Atlanta, GA 30353-4305</span>
+
+            </div>
+
+            <div class="vertical-align-top display-inline-block" style="margin-top:2%;width:35%;float:right;clear:right;">
+                <table style="width:100%;float:right;" >
+                    <tr>
+                        <td style="width: 250px;" class="font-bold">Invoice Number:</td>
+                        <td style="width:320px;">ZCCSHOR000004015</td>
+                    </tr>
+                    <tr>
+                        <td class="font-bold">Invoice Date:</td>
+                        <td>04/12/2016</td>
+                    </tr>
+                    <tr>
+                        <td class="font-bold">Subtotal:</td>
+                        <td>USD 1709.40</td>
+                    </tr>
+                    <tr>
+                        <td class="font-bold">Sales Tax:</td>
+                        <td>USD 0.00</td>
+                    </tr>
+                    <tr>
+                        <td class="font-bold">Invoice Total:</td>
+                        <td>USD 1,709.40</td>
+                    </tr>
+                    <tr>
+                        <td class="font-bold">Payment Terms:</td>
+                        <td>30</td>
+                    </tr>
+
+                </table>
             </div>
         </div>
-        <div style="width:21%;" class="vertical-align-top" align="right">
-            <table>
-                <tr>
-                    <td style="width:160px;" class="font-bold">Invoice Number:</td>
-                    <td style="width:340px;">@headeAddressRow["InvoiceNum"].ToString()</td>
-                </tr>
-                <tr>
-                    <td class="font-bold">Invoice Date:</td>
-                    <td>@detailsDataRow["InvoiceDate"].ToString()</td>
-                </tr>
-                <tr>
-                    <td class="font-bold">Subtotal:</td>
-                    <td>@detailsDataRow["InvoiceSubTotal"].ToString()</td>
-                </tr>
-                <tr>
-                    <td class="font-bold">Sales Tax:</td>
-                    <td>@detailsDataRow["TotalTax"].ToString()</td>
-                </tr>
-                <tr>
-                    <td class="font-bold">Invoice Total:</td>
-                    <td>@headeAddressRow["InvoiceTotal"].ToString()</td>
-                </tr>
-                <tr>
-                    <td class="font-bold">Payment Terms:</td>
-                    <td>@headeAddressRow["PaymentTerms"].ToString()</td>
-                </tr>
-            </table>
-        </div>
-    }
 </div>
