--- a/Template/SAS_EMEA_BU_Norway_ConsolidateInvoiceFooter.cshtml
+++ b/Template/SAS_EMEA_BU_Norway_ConsolidateInvoiceFooter.cshtml
@@ -1,5 +1,4 @@
-@inherits
-Westwind.RazorHosting.RazorTemplateBase<ZeroChaos.Business.Entities.InvoicePdfGenerationDetails>
+@inherits Westwind.RazorHosting.RazorTemplateBase
 <style>
 * {
 	font-family: 'Times New Roman', Times, serif;
