--- a/Template/SAS_EMEA_BU_Denmark_EUR_ConsolidateInvoiceBody.cshtml
+++ b/Template/SAS_EMEA_BU_Denmark_EUR_ConsolidateInvoiceBody.cshtml
@@ -1,5 +1,4 @@
-@inherits
-Westwind.RazorHosting.RazorTemplateBase<ZeroChaos.Business.Entities.InvoicePdfGenerationDetails>
+@inherits Westwind.RazorHosting.RazorTemplateBase
 <style>
 * {
 	font-family: 'Times New Roman', Times, serif;
@@ -52,19 +51,21 @@ table td.right-align {
             </tr>
         </thead>
         <tbody>
-            @foreach (DataRow row in Model.BodyDetailsDataSet.Tables[0].Rows)
-            {
+         
                 <tr>
                     <td style="width:250px;">
+					Web development
+(Danfoss A/S (EUR))
+Regular: 2014-12-01 to 2014-12-31 [4055813]
+Hess Jörgen
                     </td>
-                    <td style="width:118px;">
+                    <td style="width:118px;">111.00
                     </td>
-                    <td style="width:135px;">
+                    <td style="width:135px;">EUR 90.00
                     </td>
-                    <td style="width:135px;">
+                    <td style="width:135px;">EUR 9,990.00
                     </td>
                 </tr>
-            }
         </tbody>
         <tfoot>
             <tr>
@@ -73,73 +74,9 @@ table td.right-align {
             </tr>
         </tfoot>
     </table>
-    <table>
-        <thead>
-            <tr>
-                <th style="width:250px;">
-                    <label>Description</label>
-                </th>
-                <th style="width:118px;">
-                    <label>Units</label>
-                </th>
-                <th style="width:135px;">
-                    <label>Unit Price</label>
-                </th>
-                <th style="width:135px;">
-                    <label>Total</label>
-                </th>
-            </tr>
-        </thead>
+       <table>
         <tbody>
-            @foreach (DataRow row in Model.BodyDetailsDataSet.Tables[0].Rows)
-            {
-                <tr>
-                    <td style="width:250px;">
-                        @row["Description"].ToString()
-                    </td>
-                    <td style="width:118px;">
-                        @row["Quantity"].ToString()
-                    </td>
-                    <td style="width:135px;">
-                        @row["Rate"].ToString()
-                    </td>
-                    <td style="width:135px;">
-                        @row["Total"].ToString()
-                    </td>
-                </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr>
-                <th colspan="10">
-                </th>
-            </tr>
-        </tfoot>
-    </table>
-    <table>
-        <tbody>
-            @foreach (DataRow row in Model.BodyDetailsDataSet.Tables[0].Rows)
-            {
-                <tr>
-                    <td style="width:638px;">
-                        @row["OrgLeveUserDef01"].ToString()
-                    </td>
-                    <td style="width:2px;">
-                    </td>
-                </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr>
-                <th colspan="10">
-                </th>
-            </tr>
-        </tfoot>
-    </table>
-    <table>
-        <tbody>
-            @foreach (DataRow row in Model.BodyDetailsDataSet.Tables[0].Rows)
-            {
+         
                 <tr>
                     <td style="width:250px;">
                         Net
@@ -153,13 +90,13 @@ table td.right-align {
                 </tr>
                 <tr>
                     <td style="width:250px;">
-                        @row["invoicesubtotal"].ToString()
+                        EUR 9,990.00
                     </td>
                     <td style="width:118px;">
-                        @row["CalculatedTaxPercentage"].ToString()
+                        25.00 %
                     </td>
                     <td style="width:135px;">
-                        @row["TotalTax"].ToString()
+                        EUR 2497.5
                     </td>
                 </tr>
                 <tr>
@@ -170,7 +107,7 @@ table td.right-align {
                     <td style="width:135px;">
                     </td>
                 </tr>
-            }
+
         </tbody>
         <tfoot>
             <tr>
@@ -181,8 +118,7 @@ table td.right-align {
     </table>
     <table>
         <tbody>
-            @foreach (DataRow row in Model.BodyDetailsDataSet.Tables[0].Rows)
-            {
+          
                 <tr>
                     <td style="width:165px;font-weight:bold;font-size:12px;">
                         To Pay
@@ -190,14 +126,14 @@ table td.right-align {
                 </tr>
                 <tr>
                     <td style="width:165px;font-weight:regular;">
-                        @row["TotalInvoice"].ToString()
+                       EUR 12,487.50
                     </td>
                 </tr>
                 <tr>
                     <td style="width:165px;">
                     </td>
                 </tr>
-            }
+
         </tbody>
         <tfoot>
             <tr>
@@ -206,52 +142,4 @@ table td.right-align {
             </tr>
         </tfoot>
     </table>
-    <table>
-        <tbody>
-            @foreach (DataRow row in Model.BodyDetailsDataSet.Tables[0].Rows)
-            {
-                <tr>
-                    <td style="width:250px;">
-                        @row["ProjName;OrgLevel"].ToString()
-                    </td>
-                    <td style="width:118px;">
-                    </td>
-                    <td style="width:135px;">
-                    </td>
-                    <td style="width:135px;">
-                    </td>
-                </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr>
-                <th colspan="10">
-                </th>
-            </tr>
-        </tfoot>
-    </table>
-    <table>
-        <tbody>
-            @foreach (DataRow row in Model.BodyDetailsDataSet.Tables[0].Rows)
-            {
-                <tr>
-                    <td style="width:250px;">
-                        @row["ProjUDF6"].ToString()
-                    </td>
-                    <td style="width:118px;">
-                    </td>
-                    <td style="width:135px;">
-                    </td>
-                    <td style="width:135px;">
-                    </td>
-                </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr>
-                <th colspan="10">
-                </th>
-            </tr>
-        </tfoot>
-    </table>
-</div>
+   </div>
