--- a/Template/SAS_EMEA_BU_Denmark_EUR_ConsolidateInvoiceHeader.cshtml
+++ b/Template/SAS_EMEA_BU_Denmark_EUR_ConsolidateInvoiceHeader.cshtml
@@ -1,5 +1,4 @@
-@inherits
-Westwind.RazorHosting.RazorTemplateBase<ZeroChaos.Business.Entities.InvoicePdfGenerationDetails>
+@inherits Westwind.RazorHosting.RazorTemplateBase
 <style>
 * {
     font-family: 'Times New Roman', Times, serif;
@@ -52,17 +51,14 @@ table td {
     <div style="y:10;width:100px;x:10;height:80px;">
         <img src="@Model.ImagesFolderRootPath/ZC_logo.png" alt="logo" />
     </div>
-    @if (Model.HeaderDetailsDataSet.Tables[0].Rows.Count > default(int))
-    {
-        var headeAddressRow = Model.HeaderDetailsDataSet.Tables[0].Rows[0];
-        var detailsDataRow = Model.BodyDetailsDataSet.Tables[0].Rows[0];
+  
         <div style="height:45px;vertical-align:top;height:50px;width:0;y:6;x:345;text-align:left;">
             <div style="font-family:Times New Roman;padding-bottom:0px;font-size:18px;padding-top:0px;font-weight:bold;">
                 Invoice
             </div>
             <div style="font-family:TimesNewRoman;padding-bottom:0px;font-size:10px;padding-top:0px;font-weight:regular;">
                 Invoice No
-                <span>@headeAddressRow["ConsolidatedInvoiceNum"].ToString()</span>
+                <span>ZCCDANF000000011</span>
             </div>
         </div>
         <div style="vertical-align:middle;height:200px;width:0;y:63;x:535;text-align:left;">
@@ -71,45 +67,57 @@ table td {
                     <td style="width:160px;">Invoice Date</td>
                 </tr>
                 <tr>
-                    <td style="width:160px;">@headeAddressRow["InvoiceDate"].ToString()</td>
+                    <td style="width:160px;">2014-12-27</td>
                 </tr>
                 <tr>
                     <td style="width:400px;">Delivery Address</td>
                 </tr>
                 <tr>
-                    <td style="width:400px;height:80px;">@headeAddressRow["MDLocationName_Del"].ToString()</td>
-                    <td style="width:400px;height:80px;">@headeAddressRow["MDAddress1_Del"].ToString()</td>
-                    <td style="width:400px;height:80px;">@headeAddressRow["MDAddress2_Del"].ToString()</td>
-                    <td style="width:400px;height:80px;">@headeAddressRow["MDZipCityState_Del"].ToString()</td>
+                    <td style="width:400px;height:80px;"></td>
+                    <td style="width:400px;height:80px;">Danfoss A/S</td>
+                    <td style="width:400px;height:80px;">Nordborgvej 81</td>
+                    <td style="width:400px;height:80px;">DK-6430 Nordborg, DEN</td>
                 </tr>
                 <tr>
                     <td style="width:400px;">Invoice Address</td>
                 </tr>
                 <tr>
-                    <td style="width:400px;height:80px;">@headeAddressRow["MDLocationName"].ToString()</td>
-                    <td style="width:400px;height:80px;">@headeAddressRow["MDAddress1"].ToString()</td>
-                    <td style="width:400px;height:80px;">@headeAddressRow["MDAddress2"].ToString()</td>
-                    <td style="width:400px;height:80px;">@headeAddressRow["MDZipCityState"].ToString()</td>
+                    <td style="width:400px;height:80px;"></td>
+                    <td style="width:400px;height:80px;">Danfoss A/S</td>
+                    <td style="width:400px;height:80px;">Nordborgvej 81</td>
+                    <td style="width:400px;height:80px;">DK-6430 Nordborg, DEN</td>
                 </tr>
                 <tr>
                     <td style="width:125px;">Checker</td>
-                    <td style="width:197px;">@headeAddressRow["ProjUDF2"].ToString()</td>
+                    <td style="width:197px;">Martin Kjarbo Nielsen</td>
                     <td style="width:160px;">Our Reference</td>
-                    <td style="width:155px;">@headeAddressRow["MSPProgramManagerName"].ToString()</td>
+                    <td style="width:155px;">Randi Kvalheim</td>
                 </tr>
                 <tr>
                     <td style="width:125px;">PO Number</td>
-                    <td style="width:197px;">@headeAddressRow["ProjUDF5"].ToString()</td>
+                    <td style="width:197px;">PO 13750795</td>
                     <td style="width:160px;">Our Order No</td>
-                    <td style="width:155px;">@headeAddressRow["ProjUDF3"].ToString()</td>
+                    <td style="width:155px;"></td>
                 </tr>
                 <tr>
                     <td style="width:125px;">Customer VAT-No</td>
-                    <td style="width:197px;">@headeAddressRow["CustVat"].ToString()</td>
+                    <td style="width:197px;"></td>
                     <td style="width:160px;">Terms of Payment</td>
-                    <td style="width:155px;">@headeAddressRow["SwedishPaymentTerms"].ToString()</td>
+                    <td style="width:155px;">90 days</td>
+                </tr>
+				  <tr>
+                    <td style="width:125px;"></td>
+                    <td style="width:197px;"></td>
+                    <td style="width:160px;">Date Due</td>
+                    <td style="width:155px;">2015-03-27</td>
+                </tr>
+				  <tr>
+                    <td style="width:125px;"></td>
+                    <td style="width:197px;"></td>
+                    <td style="width:160px;">Penalty Interest</td>
+                    <td style="width:155px;">9.50 %</td>
                 </tr>
             </table>
         </div>
-    }
+
 </div>
