--- a/Templates/SunocoInvoiceTemplate_Dev_ConsolidateInvoiceHeader.cshtml
+++ b/Templates/SunocoInvoiceTemplate_Dev_ConsolidateInvoiceHeader.cshtml
@@ -68,7 +68,7 @@ table td {
             <div style="padding-bottom:0px;vertical-align:top;padding-left:3px;padding-top:0px;width:0;padding-right:0px;text-align:left;">
                 <span>ZeroChaos</span>
                 <span>PO Box 534305</span>
-                <span>@headeAddressRow["MSPAddress2"].ToString()</span>
+                <span></span>
                 <span>Atlanta, GA 30353-4305</span>
             </div>
         </div>
