--- a/Templates/SAS_EMEA_BU_Denmark_ConsolidateInvoiceBody.cshtml
+++ b/Templates/SAS_EMEA_BU_Denmark_ConsolidateInvoiceBody.cshtml
@@ -1821,70 +1821,10 @@ USD&nbsp; 2,400.00
             </tr>
         </tfoot>
     </table>
-    <table>
-        <thead>
-            <tr>
-                <th style="width:250px;">
-                    <label>Description</label>
-                </th>
-                <th style="width:118px;">
-                    <label>Units</label>
-                </th>
-                <th style="width:135px;">
-                    <label>Unit Price</label>
-                </th>
-                <th style="width:120px;">
-                    <label>Total</label>
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (DataRow row in Model.BodyDetailsDataSet.Tables[0].Rows)
-            {
-                <tr>
-                    <td style="width:250px;">
-                        @row["ProjName"].ToString()
-                    </td>
-                    <td style="width:118px;height:0px;">
-                    </td>
-                    <td style="width:135px;height:0px;">
-                    </td>
-                    <td style="width:120px;height:0px;">
-                    </td>
-                </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr>
-                <th colspan="10">
-                </th>
-            </tr>
-        </tfoot>
-    </table>
+  
     <table>
         <tbody>
-            @foreach (DataRow row in Model.BodyDetailsDataSet.Tables[0].Rows)
-            {
-                <tr>
-                    <td style="width:622px;">
-                        @row["OrgLeveUserDef01"].ToString()
-                    </td>
-                    <td style="width:2px;">
-                    </td>
-                </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr>
-                <th colspan="10">
-                </th>
-            </tr>
-        </tfoot>
-    </table>
-    <table>
-        <tbody>
-            @foreach (DataRow row in Model.BodyDetailsDataSet.Tables[0].Rows)
-            {
+          
                 <tr>
                     <td style="width:250px;">
                         Net
@@ -1895,28 +1835,26 @@ USD&nbsp; 2,400.00
                     <td style="width:200px;">
                         VAT Amt
                     </td>
+					<td style="width:200px;">
+                       To Pay
+                    </td>
                 </tr>
                 <tr>
                     <td style="width:250px;">
-                        @row["invoicesubtotal"].ToString()
+                       USD 161,706.51
                     </td>
                     <td style="width:85px;">
-                        @row["CalculatedTaxPercentage"].ToString()
+                       0.00 %
                     </td>
                     <td style="width:200px;">
-                        @row["TotalTax"].ToString()
+                       USD 0.00
+                    </td>
+					   <td style="width:200px;">
+                       USD 161,706.51
                     </td>
                 </tr>
-                <tr>
-                    <td style="width:250px;">
-                    </td>
-                    <td style="width:85px;">
-                    </td>
-                    <td style="width:200px;">
-                        @row["TotalTaxInFunctional"].ToString()
-                    </td>
-                </tr>
-            }
+          
+
         </tbody>
         <tfoot>
             <tr>
@@ -1925,79 +1863,5 @@ USD&nbsp; 2,400.00
             </tr>
         </tfoot>
     </table>
-    <table>
-        <tbody>
-            @foreach (DataRow row in Model.BodyDetailsDataSet.Tables[0].Rows)
-            {
-                <tr>
-                    <td style="width:149px;">
-                        To Pay
-                    </td>
-                </tr>
-                <tr>
-                    <td style="width:149px;font-weight:Regular;">
-                        @row["invoiceTotal"].ToString()
-                    </td>
-                </tr>
-                <tr>
-                    <td style="width:149px;">
-                    </td>
-                </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr>
-                <th colspan="10">
-                </th>
-            </tr>
-        </tfoot>
-    </table>
-    <table>
-        <tbody>
-            @foreach (DataRow row in Model.BodyDetailsDataSet.Tables[0].Rows)
-            {
-                <tr>
-                    <td style="width:250px;">
-                        @row["AdjustmentNotes"].ToString()
-                    </td>
-                    <td style="width:118px;">
-                    </td>
-                    <td style="width:135px;">
-                    </td>
-                    <td style="width:120px;">
-                    </td>
-                </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr>
-                <th colspan="10">
-                </th>
-            </tr>
-        </tfoot>
-    </table>
-    <table>
-        <tbody>
-            @foreach (DataRow row in Model.BodyDetailsDataSet.Tables[0].Rows)
-            {
-                <tr>
-                    <td style="width:250px;">
-                        @row["ProjUDF6"].ToString()
-                    </td>
-                    <td style="width:118px;">
-                    </td>
-                    <td style="width:135px;">
-                    </td>
-                    <td style="width:120px;">
-                    </td>
-                </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr>
-                <th colspan="10">
-                </th>
-            </tr>
-        </tfoot>
-    </table>
+   
 </div>
